@@ -604,7 +604,7 @@
             <dependency>
                 <groupId>com.evolveum.polygon</groupId>
                 <artifactId>connector-ldap</artifactId>
-                <version>1.4.2.19</version>
+                <version>1.4.3.0-SNAPSHOT</version>
                 <exclusions>
 					<exclusion> <!-- Version in dependency of org.apache.servicemix.bundles:org.apache.servicemix.bundles.dom4j conflicts with xalan. Can be removed when connector version is bumped beyond 1.4.2.17 -->
                         <groupId>xml-apis</groupId>
@@ -1164,7 +1164,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>${project.source.version}</source>
 					<target>${project.source.version}</target>
@@ -1347,7 +1347,7 @@
 						<midpoint.home>target/midpoint-home</midpoint.home>
 						<java.util.logging.config.file>${project.build.directory}/test-classes/logging.properties</java.util.logging.config.file>
 					</systemPropertyVariables>
-					<argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Xms1024m -Xmx2048m</argLine>
 					<!--<argLine>-agentpath:/usr/local/yjp-11.0.10/bin/linux-x86-64/libyjpagent.so=alloceach=10,allocsizelimit=1048576,sampling,walltimespec=/home/lazyman/.yjp/config/.walltime,noj2ee,profileruipath=/usr/local/yjp-11.0.10/bin/yjp.sh,onexit=snapshot 
 						-Xms512m -Xmx1024m -XX:MaxPermSize=192m</argLine> -->
 
